# oneAPI-samples

AI-and-Analytics/End-to-end-Workloads/JobRecommendationSystem/: JobRecommendationSystem.py  pyproject.toml  sample.json
AI-and-Analytics/Features-and-Functionality/INC_QuantizationAwareTraining_TextClassification/: INC_QuantizationAwareTraining_TextClassification.ipynb  pyproject.toml
AI-and-Analytics/Features-and-Functionality/IntelPyTorch_TrainingOptimizations_AMX_BF16/: pyproject.toml  sample.json
AI-and-Analytics/Features-and-Functionality/IntelPython_Numpy_Numba_dpnp_kNN/: pyproject.toml  sample.json
AI-and-Analytics/Features-and-Functionality/IntelPython_XGBoost_Performance/: pyproject.toml  sample.json
AI-and-Analytics/Features-and-Functionality/IntelPython_XGBoost_daal4pyPrediction/: IntelPython_XGBoost_daal4pyPrediction.ipynb  pyproject.toml  sample.json
AI-and-Analytics/Features-and-Functionality/IntelPython_daal4py_DistributedKMeans/: IntelPython_daal4py_Distributed_Kmeans.ipynb  pyproject.toml  sample.json
AI-and-Analytics/Features-and-Functionality/IntelPython_daal4py_DistributedLinearRegression/: IntelPython_daal4py_Distributed_LinearRegression.ipynb  pyproject.toml  sample.json
AI-and-Analytics/Features-and-Functionality/IntelTensorFlow_AMX_BF16_Inference/: pyproject.toml  sample.json
AI-and-Analytics/Features-and-Functionality/IntelTensorFlow_AMX_BF16_Training/: pyproject.toml  sample.json
AI-and-Analytics/Features-and-Functionality/IntelTensorFlow_Enabling_Auto_Mixed_Precision_for_TransferLearning/: enabling_automixed_precision_for_transfer_learning_with_tensorflow.ipynb
AI-and-Analytics/Features-and-Functionality/IntelTensorFlow_Horovod_Distributed_Deep_Learning/: sample.json  tensorflow_with_horovod.ipynb
AI-and-Analytics/Features-and-Functionality/IntelTensorFlow_ModelZoo_Inference_with_FP32_Int8/: ResNet50_Inference.ipynb  ResNet50_Inference_gpu.ipynb
AI-and-Analytics/Features-and-Functionality/IntelTensorFlow_PerformanceAnalysis/: TF_PerfAnalysis.ipynb
AI-and-Analytics/Features-and-Functionality/IntelTensorFlow_TextGeneration_with_LSTM/: TextGenerationModelTraining.ipynb
AI-and-Analytics/Features-and-Functionality/IntelTensorFlow_Transformer_AMX_bfloat16_MixedPrecision/: IntelTensorFlow_Transformer_AMX_bfloat16_MixedPrecision.ipynb  sample.json
AI-and-Analytics/Features-and-Functionality/IntelTensorFlow_for_LLMs/: GPTJ_finetuning.ipynb  GPTJ_inference.ipynb
AI-and-Analytics/Features-and-Functionality/IntelTransformers_Quantization/: sample.json
AI-and-Analytics/Features-and-Functionality/Intel_Extension_For_SKLearn_Performance_SVC_Adult/: Intel_Extension_for_SKLearn_Performance_SVC_Adult.ipynb  pyproject.toml  sample.json
AI-and-Analytics/Getting-Started-Samples/INC-Quantization-Sample-for-PyTorch/: sample.json
AI-and-Analytics/Getting-Started-Samples/INC-Sample-for-Tensorflow/: sample.json
AI-and-Analytics/Getting-Started-Samples/IntelPython_XGBoost_GettingStarted/: IntelPython_XGBoost_GettingStarted.ipynb  pyproject.toml  sample.json
AI-and-Analytics/Getting-Started-Samples/IntelPython_daal4py_GettingStarted/: IntelPython_daal4py_GettingStarted.ipynb  pyproject.toml  sample.json
AI-and-Analytics/Getting-Started-Samples/Modin_GettingStarted/: Modin_GettingStarted.ipynb  pyproject.toml  sample.json
AI-and-Analytics/Getting-Started-Samples/Modin_Vs_Pandas/: Modin_Vs_Pandas.ipynb  pyproject.toml
