[project]
name = "inteltensorflow-amx-bf16-inference"
version = "0.1.0"
description = "Add your description here"
authors = [
    {name = "Copyright © 2020 Intel Corporation"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "intel-extension-for-tensorflow>=2.15.0.2",
    "matplotlib>=3.10.1",
    "notebook>=7.3.2",
    "pillow>=11.1.0",
    "py-cpuinfo>=9.0.0",
    "requests>=2.32.3",
    "tensorflow-hub==0.16",
]
[[tool.uv.index]]
url = "https://software.repos.intel.com/python/pypi"
