[project]
name = "intelpython-xgboost-gettingstarted"
version = "0.1.0"
description = "The sample illustrates how to setup and train an XGBoost model on datasets for prediction"
authors = [
    {name = "Copyright © 2023 Intel Corporation"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "notebook>=7.3.2",
    "pandas>=2.2.3",
    "scikit-learn==1.5.2",
    "xgboost-cpu>=3.0.0",
]

[dependency-groups]
dev = [
    "jupyter",
]
