[project]
name = "moding_gettingstarted"
version = "0.1.0"
description = "This sample illustrates how to use Modin* accelerated Pandas functions and notes the performance gain when compared to standard Pandas functions"
authors = [
    {name = "Copyright © 2020 Intel Corporation"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11, <=3.13"
dependencies = [
    "matplotlib>=3.10.1",
    "modin[all]>=0.32.0",
]
[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
